styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');

/* font-family: 'Inter', sans-serif; */

/* 
var(---primary--main-background);
var(---primary--card-background);
var(---primary--soft-violet);
var(---neutral--main-paragraph);
var(---neutral--stats-heading);

 */

:root {
    font-size: 62.5%;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    ---primary--main-background: hsl(233, 47%, 7%);
    ---primary--card-background: hsl(244, 38%, 16%);
    ---primary--soft-violet: hsl(277, 64%, 61%);
    ---neutral--main-paragraph: hsla(0, 0%, 100%, 0.75);
    ---neutral--stats-heading: hsla(0, 0%, 100%, 0.6);
}

body {
    font-family: 'Inter', sans-serif;
    font-size: 1.4rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    overflow: hidden;
    margin: 0;
    background-color: var(---primary--main-background);
}

.card-container {
    background-color: var(---primary--card-background);
    text-align: center;
    max-width: 25rem;
    border-radius: 10px 10px 10px 10px;
}

.hero-image-container {
    position: relative;
}

.hero-image {
    height: 20rem;
    display: block;
    background-image: url('/images/image-header-mobile.jpg');
    background-position: center top;
    background-size: contain;
    background-repeat: no-repeat;
    border-radius: 10px 10px 0 0;
}

.overlay {
    width: 100%;
    height: 91.9%;
    background: var(---primary--soft-violet);
    opacity: 0.6;
    position: absolute;
    bottom: 8%;
    border-radius: 10px 10px 0 0;
}

.text-container {
    text-align: center;
    margin-bottom: 4rem;
}

.text-container h1 {
    color: var(---neutral--main-paragraph);
    padding-left: 2rem;
    padding-right: 2rem;
}

.text-container span {
    color: var(---primary--soft-violet);
}

.text-container p {
    font-size: 1.3rem;
    line-height: 1.5;
    color: var(---neutral--stats-heading);
    padding-left: 1rem;
    padding-right: 1rem;
}

.stats-heading {
    color: var(---neutral--main-paragraph);
    margin: 0;
}

.stats-wording {
    font-size: 1rem;
    color: var(---neutral--stats-heading);
    text-transform: uppercase;
    padding-top: 0.5rem;
    margin-bottom: 2rem;
}

.attribution {
    font-size: 11px;
    text-align: center;
}
.attribution a {
    color: hsl(228, 45%, 44%);
}

@media screen and (min-width: 768px) {
    .card-container {
        display: flex;
        flex-direction: row-reverse;
        max-width: 100rem;
        height: 40vh;
    }

    .hero-image-container {
        max-width: 50%;
    }

    .hero-image {
        width: 90vw;
    }

    .overlay {
        max-width: 90vw;
    }

    .text-container {
        display: flex;
        flex-direction: column;
    }

    .stats-container {
        display: flex;
        justify-content: space-around;
    }

    .stat-container-desktop {
        display: flex;
        flex-direction: column;
    }
}

